Reorganise modes in menu a bit

--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -263,7 +263,7 @@ Note that the states are numbered starting from 0, not 1,
   so to select e.g.\ the second state you have declared you need to select state 1, not state 2.
 
 Moving around the grid requires another mode, \emph{move mode}.
-This mode can be selected from the \menu{Draw} menu, or by pressing the \keys{M} key.
+This mode can be selected from the \menu{Draw > Mode} menu, or by pressing the \keys{M} key.
 You can get back to drawing mode by using the \menu{Draw} menu, or by pressing the \keys{D} key.
 In this mode, clicking and dragging will not draw on the grid, but rather will move or pan around the grid.
 Enabling this mode will also disable the `drawing options' pane.
