Add GUI for ALPACA Stylesheets

--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -424,6 +424,17 @@ UUU
 
 \footnotetext{In more detail: the `examples' are actually runnable tests containing an embedded description of the expected output as well.}
 
+\section{Using ALPACA Stylesheets}
+\label{sec:stys}
+
+The \emph{ALPACA Stylesheets} format is a simple way to change the styling of a CA specified using ALPACA.
+The format is documented at \url{https://github.com/catseye/ALPACA/blob/0b2d57b8739dc240969c62c8e1cd13c1863770e0/doc/ALPACA.markdown#alpaca-stylesheets-10}.
+
+To open the ALPACA Stylesheets window, use the \menu{Draw > Edit Stylesheet} menu item.
+This opens a window where you can edit the current stylesheet using the textbox in the middle of the screen,
+  and then set it using the `Set Stylesheet' button at the bottom.
+You can also use the \menu{File > Open} and \menu{File > Save As} menu items to open and save stylesheets respectively.
+
 \section{Using Haskell}
 \label{sec:ushs}
 
