Add fontenc T1 in manual

--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -1,5 +1,6 @@
 \documentclass[oneside,a4paper]{memoir}
 
+\usepackage[T1]{fontenc}
 \usepackage{microtype}
 \usepackage{graphicx}
 \usepackage{subcaption}
