--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -270,11 +270,11 @@ Enabling this mode will also disable the `drawing options' pane.
 In any mode, you can also zoom in and out using the mouse wheel.
 At the moment, zooming always works relative to the top-leftmost point.
 This means that if you have a pattern drawn in the middle of the grid and it suddenly vanishes when you zoom in,
-  try moving to the bottom left to try find it again.
+  try moving to the bottom right to try find it again.
 
 If you zoom out far enough, you will notice that the grid abruptly comes to an end at a certain point.
 This is because the grid is finite.
-However, the grid `wraps around' at its edges; that is, if you move off one edge of the paper, you reappear at the opposite edge.
+However, the grid `wraps around' at its edges; that is, if you move off one edge of the grid, you reappear at the opposite edge.
 For instance, the cell immediately above the topmost cell is considered to be the bottommost cell.
 
 \section{Changing the Rule}
