Zoom from cursor position, not from top left corner

--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -269,9 +269,7 @@ In this mode, clicking and dragging will not draw on the grid, but rather will m
 Enabling this mode will also disable the `drawing options' pane.
 
 In any mode, you can also zoom in and out using the mouse wheel.
-At the moment, zooming always works relative to the top-leftmost point.
-This means that if you have a pattern drawn in the middle of the grid and it suddenly vanishes when you zoom in,
-  try moving to the bottom right to try find it again.
+Scroll up over a point to zoom in to that point, and scroll down to zoom out.
 
 If you zoom out far enough, you will notice that the grid abruptly comes to an end at a certain point.
 This is because the grid is finite.
