Allow delay change between generations

--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -318,11 +318,16 @@ You can repeatedly press this button to run the rules more than once.
 
 The topmost button will repeatedly step the CA.
 This operation is generally referred to as \emph{running} the CA.
-Currently the rate at which the rules are applied cannot be changed;
-  this will be corrected in future versions.
 After this button has been pressed, the icon will change to a pause icon.
 As this suggests, the button can be pressed again to pause the CA.
 Pressing it again will allow the CA to be run again.
+
+To adjust the rate of running, use the \menu{Control > Faster} and \menu{Control > Slower} menu items.
+Alternatively, you may press the \keys{{+}} or \keys{-} keys respectively.
+The current speed is shown at the top of the window as the delay between steps;
+  that is, a smaller number indicates a faster speed.
+Do note that Cabasa will not let you increase the speed below 50,
+  since at these fast speeds Cabasa may crash when it attempts to calculate too quickly.
 
 To reset the CA after you have run or stepped it, use the bottom `reset' button.
 This button will restore the original state of the CA after you have pressed the `step' or `run' buttons.
