--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -316,7 +316,7 @@ To run one generation of the CA, use the middle button.
 This operation is called \emph{stepping}.
 You can repeatedly press this button to run the rules more than once.
 
-The topmost button will repeatedly step the CA.
+The topmost button will repeatedly step the CA when it is pressed once.
 This operation is generally referred to as \emph{running} the CA.
 After this button has been pressed, the icon will change to a pause icon.
 As this suggests, the button can be pressed again to pause the CA.
