Add overlay in paste-pending mode

--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -289,9 +289,10 @@ To clear the current selection, use the \hbox{\menu{Draw > Clear Selection}} men
 
 Once you have selected part of a grid, you may \emph{copy} it into the \emph{clipboard},
   with the purpose of \emph{pasting} it back into another part of the grid.
-To copy the selection, use the \menu{Edit > Copy} menu item;
-  to paste it back, press \menu{Edit > Paste},
-  and then click on your document at the location you would like to paste the selection at.
+To copy the selection, use the \menu{Edit > Copy} menu item.
+To paste your selection back, press \menu{Edit > Paste};
+  a brown overlay will then be shown at the location where your selection will be pasted.
+Move your mouse, and then click on your document to paste your selection at the shown location.
 The usual hotkeys \keys{\ctrl + C} and \keys{\ctrl + V} respectively may also be used.
 
 \section{Changing the Rule}
