Add menu item to change grid size

--- a/data/doc/UserManual.tex
+++ b/data/doc/UserManual.tex
@@ -276,6 +276,15 @@ This is because the grid is finite.
 However, the grid `wraps around' at its edges; that is, if you move off one edge of the grid, you reappear at the opposite edge.
 For instance, the cell immediately above the topmost cell is considered to be the bottommost cell.
 
+\section{Changing the Grid Size}
+\label{sec:gridsize}
+
+By default, Cabasa uses a $100 \times 100$ grid (unless this has been changed in the \hyperref[sec:sets]{Settings}.
+This may be changed using the \menu{Edit > Change Grid Size} menu item, which launches a `Change Size' dialog.
+This dialog may be used by entering the new size as $\text{width} \times \text{height}$,
+  then pressing `OK'
+  (or `Cancel' if you actually don't want to change the size).
+
 \section{Selection and copying}
 \label{sec:selcopy}
 
